--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -754,6 +754,11 @@ PostPauseQueue=no
 # by 100 KB/s and download at full speed overnights:
 
 # Time to execute the command (HH:MM).
+#
+# Multiple comma-separated values are accepted.
+# Asterix as hours-part means "every hour".
+#
+# Examples: "08:00", "00:00,06:00,12:00,18:00", "*:00", "*:00,*:30".
 #Task1.Time=08:00
 
 # Week days to execute the command (1-7).
