redesigned server pool and par-checker to avoid using of semaphores; updated makefile to include postprocess-example.conf
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@323 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -211,7 +211,7 @@ nzbget_SOURCES = ArticleDownloader.cpp ArticleDownloader.h BinRpc.cpp BinRpc.h \
 	ScriptController.h ServerPool.cpp ServerPool.h TLS.cpp TLS.h Thread.cpp Thread.h Util.cpp \
 	Util.h XmlRpc.cpp XmlRpc.h nzbget.cpp nzbget.h svn_version.cpp
 
-EXTRA_DIST = nzbget.conf.example postprocess-example.sh \
+EXTRA_DIST = nzbget.conf.example postprocess-example.sh postprocess-example.conf \
 	win32.h NTService.cpp NTService.h \
 	libpar2-0.2-bugfixes.patch libpar2-0.2-cancel.patch \
 	libpar2-0.2-MSVC8.patch libsigc++-2.0.18-MSVC8.patch \
