Added message log to history items; new field <Log> is returned by RPC-command <history> for each item
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@349 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -680,9 +680,15 @@ NzbCleanupDisk=no
 #       current nzb-file;
 #  92 - request nzbget to do par-check/repair for all collections in the 
 #       current nzb-file;
-#  93 - post-process successfull;
+#  93 - post-process successful;
 #  94 - post-process failed;
 # All other return codes are interpreted as "status unknown".
+#
+# The return value is used to display the status of post-processing in
+# a history view. In addition to status one or more text messages can be
+# passed to history using a special prefix "[HISTORY]" by printing messages
+# to standard output. For example:
+#   echo "[ERROR] [HISTORY] Unpack failed, not enough disk space";
 #
 # NOTE: The parameter NZBPP_NZBCOMPLETED is very important and MUST be checked 
 # even in the simplest scripts.
