added a new return code <95/POSTPROCESS_NONE> for post-processing scripts for cases when pp-script skips all post-processing work (typically upon a user's request via a pp-parameter); modified the example post-processing script to return the new code instead of a error code when a pp-parameter <PostProcess> was set to <no>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@350 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -680,8 +680,9 @@ NzbCleanupDisk=no
 #       current nzb-file;
 #  92 - request nzbget to do par-check/repair for all collections in the 
 #       current nzb-file;
-#  93 - post-process successful;
-#  94 - post-process failed;
+#  93 - post-process successful (status = SUCCESS);
+#  94 - post-process failed (status = FAILURE);
+#  95 - post-process skipped (status = NONE);
 # All other return codes are interpreted as "status unknown".
 #
 # The return value is used to display the status of post-processing in
