corrected few spelling errors in the example configuration file
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@351 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -207,7 +207,7 @@ MergeNzb=no
 #
 # NOTE: Files with extension ".nzb_processed" are not passed to 
 # NzbProcess-script before adding to queue. This feature allows 
-# NzbProcess-script to perevnt the scanning of nzb-files extracted from 
+# NzbProcess-script to prevent the scanning of nzb-files extracted from 
 # archives, if they were already processed by the script.
 NzbProcess=
 
@@ -270,8 +270,8 @@ Decode=yes
 # destination file with required size (total size of all articles), 
 # then writes on the fly decoded articles directly to the file 
 # without creating of any temporary files, even for decoded articles.
-# This may results in major performance improvement, but this higly 
-# depends on OS and filesystem used.
+# This may results in major performance improvement, but this highly 
+# depends on OS and file system.
 #
 # Can improve performance on a very fast internet connections, 
 # but you need to test if it works in your case.
@@ -282,19 +282,19 @@ Decode=yes
 # The possible reason is that on EXT3-partition Linux can create large files
 # very fast (if the content of file does not need to be initialized), 
 # but Windows on NTFS-partition and also Linux on FAT32-partition need to
-# initialize created large file with nulls, resulting in a big performace 
+# initialize created large file with nulls, resulting in a big performance 
 # degradation.
 #
 # NOTE: for testing try to download few big files (with total size 500-1000MB)
 # and measure required time. Do not rely on the program's speed indicator.
 #
 # NOTE: if both options <DirectWrite> and <ContinuePartial> are enabled,
-# the program will create empty articles-files in temp-directrory. They
+# the program will still create empty articles-files in temp-directory. They
 # are used to continue download of file on a next program start. To minimize
 # disk-io it is recommended to disable option <ContinuePartial>, if 
 # <DirectWrite> is enabled. Especially on a fast connections (where you
 # would want to activate <DirectWrite>) it should not be a problem to 
-# redownload the interrupted file.
+# redownload an interrupted file.
 DirectWrite=no
 
 # Check CRC of downloaded and decoded articles (yes, no).
@@ -362,7 +362,7 @@ DownloadRate=0
 # Set the size of memory buffer used by writing the articles (bytes).
 #
 # Bigger values decrease disk-io, but increase memory usage.
-# Value "0" causes the OS-dependend default value to be used.
+# Value "0" causes an OS-dependent default value to be used.
 # With value "-1" (which means "max/auto") the program sets the size of 
 # buffer according to the size of current article (typically less than 500K).
 #
@@ -376,10 +376,10 @@ DownloadRate=0
 #
 # NOTE: for desktop computers with large amount of memory value "-1" (max/auto)
 # is recommended, but for computers with very low memory (routers, NAS)
-# value "0" (default OS-dependend size) could be better alternative.
+# value "0" (default OS-dependent size) could be better alternative.
 #
 # NOTE: write-buffer is managed by OS (system libraries) and therefore 
-# the effect of the option is highly OS-dependend.
+# the effect of the option is highly OS-dependent.
 WriteBufferSize=0
 
 # Pause if disk space gets below this value (megabytes).
@@ -393,7 +393,7 @@ DiskSpace=250
 # cancelled (nzb-file was deleted from queue) (yes, no).
 #
 # NOTE: nzbget does not delete files in a case if all remaining files in 
-# queue are par-files. That prevents the accidential deletetion if the option
+# queue are par-files. That prevents the accidental deletion if the option
 # <ParCleanupQueue> is disabled or if the program was interrupted during 
 # parcheck and later restarted without reloading of post queue (option 
 # <ReloadPostQueue> disabled).
@@ -408,7 +408,7 @@ DeleteCleanupDisk=no
 # which could be required later if the collection will be moved back to
 # download queue for downloading of remaining files. The parked files still
 # consume some amount of memory and disk space. If the collection was downloaded
-# and successfully par-checked or postprocessed it is recommeded to discard the
+# and successfully par-checked or postprocessed it is recommended to discard the
 # unneeded parked files before adding the collection to history. For par2-files
 # that can be achieved with the option <ParCleanupQueue>.
 KeepHistory=1
@@ -474,7 +474,7 @@ CreateBrokenLog=yes
 # newsserver etc.
 DumpCore=no
 
-# See also option <LogFile> in secion "PATHS"
+# See also option <LogFile> in section "PATHS"
 
 
 ##############################################################################
@@ -484,8 +484,8 @@ DumpCore=no
 #
 # loggable - only messages will be printed to standard output;
 # colored  - prints messages (with simple coloring for messages categories)
-#            and download progress info; uses escape-sequenses to move cursor;
-# curses   - advanced interactive iterface with the ability to edit 
+#            and download progress info; uses escape-sequences to move cursor;
+# curses   - advanced interactive interface with the ability to edit 
 #            download queue and various output option.
 OutputMode=curses
 
@@ -660,7 +660,7 @@ NzbCleanupDisk=no
 #                           the same nzb-files failed;
 #  NZBPP_CATEGORY     - category assigned to nzb-file (can be empty string).
 #
-# If nzb-file has assotiated postprocess-parameters (which can be set using
+# If nzb-file has associated postprocess-parameters (which can be set using
 # subcommand <O> of command <-E>, for example: nzbget -E G O "myvar=hello !" 10)
 # or using XML-/JSON-RPC (for example via web-interface), they are also passed 
 # as environment variables. These variables have prefix "NZBPR_" in their names.
@@ -837,16 +837,17 @@ PostPauseQueue=no
 # 1) Disable par-checking and -repairing ("ParCheck=no"). VERY important,
 #    because par-checking/repairing needs a lot of CPU-power and 
 #    significantly increases disk usage;
-# 2) Try to activate option <DirectWrite> ("DirectWrite=yes");
+# 2) Try to activate option <DirectWrite> ("DirectWrite=yes"), especially
+#    if you use EXT3-partitions;
 # 3) Disable option <CrcCheck> ("CrcCheck=no");
 # 4) Disable option <ContinuePartial> ("ContinuePartial=no");
 # 5) Do not limit download rate ("DownloadRate=0"), because the bandwidth 
-#    throttling eats CPU time;
-# 6) Disable logging for info- and debug-messages ("InfoTarget=none", 
+#    throttling eats some CPU time;
+# 6) Disable logging for detail- and debug-messages ("DetailTarget=none", 
 #    "DebugTarget=none");
 # 7) Run the program in daemon (Posix) or service (Windows) mode and use
 #    remote client for short periods of time needed for controlling of 
 #    download process on server. Daemon/Service mode eats less CPU 
-#    resources due to not updating of output on screen.
+#    resources than console server mode due to not updating the screen.
 # 8) Increase the value of option <WriteBufferSize> or better set it to 
 #    "-1" (max/auto) if you have spare 5-20 MB of memory.
