--- a/Makefile.in
+++ b/Makefile.in
@@ -209,7 +209,8 @@ EXTRA_DIST = nzbget.conf.example postprocess-example.sh postprocess-example.conf
 	win32.h NTService.cpp NTService.h \
 	libpar2-0.2-bugfixes.patch libpar2-0.2-cancel.patch \
 	libpar2-0.2-MSVC8.patch libsigc++-2.0.18-MSVC8.patch \
-	Makefile.cvs nzbget.kdevelop nzbget.sln nzbget.vcproj
+	Makefile.cvs nzbget.kdevelop nzbget.sln nzbget.vcproj \
+	nzbgetd nzbget-shell.bat
 
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
